--- a/public/404.html
+++ b/public/404.html
@@ -5,12 +5,12 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
-<title>404 Page not found | The Overlooked Cloud Security Expert</title>
+<title>404 Page not found | Oob Skulden</title>
 <meta name="keywords" content="">
 <meta name="description" content="Practical cloud security guidance for teams with limited budgets">
 <meta name="author" content="Oob Skulden">
 <link rel="canonical" href="http://192.168.37.123:1313/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.343cc480b9ffc8f04ccbe5e968ad674880cab773ec19905e93033065c1e7a804.css" integrity="sha256-NDzEgLn/yPBMy&#43;XpaK1nSIDKt3PsGZBekwMwZcHnqAQ=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.bdea0db00103359de2a57ad69aa0cd34353cc246d3db56d4582e3fae3491c6f9.css" integrity="sha256-veoNsAEDNZ3ipXrWmqDNNDU8wkbT21bUWC4/rjSRxvk=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://192.168.37.123:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://192.168.37.123:1313/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="http://192.168.37.123:1313/favicon-32x32.png">
@@ -76,7 +76,9 @@
     <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://192.168.37.123:1313/" accesskey="h" title="The Overlooked Cloud Security Expert (Alt + H)">The Overlooked Cloud Security Expert</a>
+            <a href="http://192.168.37.123:1313/" accesskey="h" title="Oob Skulden (Alt + H)">
+                <img src="http://192.168.37.123:1313/images/oob.png" alt="" aria-label="logo"
+                    height="60">Oob Skulden</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -134,7 +136,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://192.168.37.123:1313/">The Overlooked Cloud Security Expert</a></span> · 
+        <span>&copy; 2025 <a href="http://192.168.37.123:1313/">Oob Skulden</a></span> · 
 
     <span>
         Powered by
