--- a/public/about/index.html
+++ b/public/about/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
-<title>About | The Overlooked Cloud Security Expert</title>
+<title>About | Oob Skulden</title>
 <meta name="keywords" content="">
 <meta name="description" content="The Mission
 Enterprise-grade security shouldn&rsquo;t require enterprise budgets. This site demonstrates how small teams can implement robust cloud security using:
@@ -26,7 +26,7 @@ What You&rsquo;ll Find Here
 Every article includes:">
 <meta name="author" content="Oob Skulden">
 <link rel="canonical" href="http://192.168.37.123:1313/about/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.343cc480b9ffc8f04ccbe5e968ad674880cab773ec19905e93033065c1e7a804.css" integrity="sha256-NDzEgLn/yPBMy&#43;XpaK1nSIDKt3PsGZBekwMwZcHnqAQ=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.bdea0db00103359de2a57ad69aa0cd34353cc246d3db56d4582e3fae3491c6f9.css" integrity="sha256-veoNsAEDNZ3ipXrWmqDNNDU8wkbT21bUWC4/rjSRxvk=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://192.168.37.123:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://192.168.37.123:1313/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="http://192.168.37.123:1313/favicon-32x32.png">
@@ -92,7 +92,9 @@ Every article includes:">
     <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://192.168.37.123:1313/" accesskey="h" title="The Overlooked Cloud Security Expert (Alt + H)">The Overlooked Cloud Security Expert</a>
+            <a href="http://192.168.37.123:1313/" accesskey="h" title="Oob Skulden (Alt + H)">
+                <img src="http://192.168.37.123:1313/images/oob.png" alt="" aria-label="logo"
+                    height="60">Oob Skulden</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -184,17 +186,35 @@ Every article includes:">
 <li><strong>No generic advice</strong> - Specific tools, specific commands, specific results</li>
 </ol>
 <h2 id="about-oob-skulden">About Oob Skulden<a hidden class="anchor" aria-hidden="true" href="#about-oob-skulden">#</a></h2>
-<p>Security practitioner focused on the &ldquo;boring but critical&rdquo; components that organizations deploy without proper security consideration.</p>
+<p><strong>Oob Skulden</strong> is my pseudonym name. My real name is <strong>Bob Walden</strong>.</p>
+<p>I’ve spent <strong>over 30 years</strong> building and operating systems across multiple generations of technology — from early enterprise environments to modern cloud platforms. My background includes deep, hands-on work with both Windows and Linux, long before either was considered “easy.”</p>
+<p>Over the course of my career, I’ve worked across infrastructure, networking, data, and consulting roles, and I’ve spent <strong>the last 15+ years focused on security</strong> — not as an abstract discipline, but as something that has to function under real-world constraints.</p>
+<p>Today, I work in cybersecurity at a large organization (<strong>company name intentionally redacted</strong>). The views and content here are my own and are not affiliated with my employer.</p>
+<h2 id="why-this-site-exists">Why this site exists<a hidden class="anchor" aria-hidden="true" href="#why-this-site-exists">#</a></h2>
+<p>Most security guidance assumes unlimited budget, time, and specialization.</p>
+<p>Most teams don’t have that.</p>
+<p>This site focuses on practical cloud security for small teams: concrete detection ideas, realistic remediation patterns, and attention to the overlooked parts of modern systems where risk tends to accumulate quietly.</p>
+<p>If you’re responsible for security <em>and</em> everything else, you’re in the right place.</p>
 <p><strong>Homelab environment:</strong> Proxmox cluster, HashiCorp Vault, multi-cloud free tier deployments</p>
 <p><strong>Current focus:</strong> Building practical security tooling that small teams can actually implement</p>
 <hr>
-<p><strong>Connect:</strong></p>
+<h2 id="connect">Connect<a hidden class="anchor" aria-hidden="true" href="#connect">#</a></h2>
 <ul>
-<li><a href="https://www.linkedin.com/in/stonepedal/">LinkedIn</a> - Professional updates</li>
-<li><a href="https://www.reddit.com/user/oobskulden/">Reddit</a> - Community discussions</li>
-<li><a href="https://x.com/oobskulden">X/Twitter</a> - Quick updates</li>
-<li><a href="/index.xml">RSS</a> - Get every article</li>
+<li><strong><a href="https://github.com/oob-skulden/oob-skulden-site">GitHub</a></strong> - Code, tools, and examples</li>
+<li><strong><a href="https://www.linkedin.com/in/stonepedal/">LinkedIn</a></strong> - Professional updates</li>
+<li><strong><a href="https://www.reddit.com/user/oobskulden/">Reddit</a></strong> - Community discussions (r/netsec, r/cybersecurity)</li>
+<li><strong><a href="https://x.com/oobskulden">X/Twitter</a></strong> - Quick updates and threads</li>
+<li><strong><a href="/index.xml">RSS Feed</a></strong> - Get every article in your reader</li>
 </ul>
+<h2 id="discuss-articles">Discuss Articles<a hidden class="anchor" aria-hidden="true" href="#discuss-articles">#</a></h2>
+<p>Found something useful? Have questions? Share on:</p>
+<ul>
+<li><strong>Hacker News</strong> - Use the share button on any article</li>
+<li><strong>Reddit</strong> - Post to r/netsec, r/cybersecurity, r/aws</li>
+<li><strong>LinkedIn</strong> - Tag me in your share for discussion</li>
+</ul>
+<hr>
+<p><em>All code and queries on this site are tested in my homelab before publication.</em></p>
 
 
   </div>
@@ -226,9 +246,9 @@ Every article includes:">
     </a>
 
     
-    <a target="_blank" rel="noopener noreferrer" aria-label="share on Hacker News"
+    <a target="_blank" rel="noopener noreferrer" aria-label="submit to Hacker News"
         href="https://news.ycombinator.com/submitlink?u=http%3a%2f%2f192.168.37.123%3a1313%2fabout%2f&t=About"
-        title="Share on Hacker News">
+        title="Submit to Hacker News">
         <svg viewBox="0 0 512 512" height="30" width="30" fill="currentColor">
             <path d="M0 32v448h448V32H0zm21.2 197.2H21c.1-.1.2-.3.3-.4 0 .1 0 .3-.1.4zm218 53.9V384h-31.4V281.3L128 128h37.3l52.7 115.6 52.7-115.6h37.3l-79.8 154.1z"/>
         </svg>
@@ -249,7 +269,7 @@ Every article includes:">
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://192.168.37.123:1313/">The Overlooked Cloud Security Expert</a></span> · 
+        <span>&copy; 2025 <a href="http://192.168.37.123:1313/">Oob Skulden</a></span> · 
 
     <span>
         Powered by
