--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
-<title>The Overlooked Cloud Security Expert</title>
+<title>Oob Skulden</title>
 
 <meta name="description" content="Practical cloud security guidance for teams with limited budgets">
 <meta name="author" content="Oob Skulden">
 <link rel="canonical" href="http://192.168.37.123:1313/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.343cc480b9ffc8f04ccbe5e968ad674880cab773ec19905e93033065c1e7a804.css" integrity="sha256-NDzEgLn/yPBMy&#43;XpaK1nSIDKt3PsGZBekwMwZcHnqAQ=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.bdea0db00103359de2a57ad69aa0cd34353cc246d3db56d4582e3fae3491c6f9.css" integrity="sha256-veoNsAEDNZ3ipXrWmqDNNDU8wkbT21bUWC4/rjSRxvk=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://192.168.37.123:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://192.168.37.123:1313/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="http://192.168.37.123:1313/favicon-32x32.png">
@@ -79,7 +79,9 @@
     <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://192.168.37.123:1313/" accesskey="h" title="The Overlooked Cloud Security Expert (Alt + H)">The Overlooked Cloud Security Expert</a>
+            <a href="http://192.168.37.123:1313/" accesskey="h" title="Oob Skulden (Alt + H)">
+                <img src="http://192.168.37.123:1313/images/oob.png" alt="" aria-label="logo"
+                    height="60">Oob Skulden</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -139,6 +141,15 @@
 Real detection queries. Actual remediation code.</p>
 <p><strong>No theory. No vendor pitches. Just working solutions.</strong></p>
 </span><div class="social-icons" >
+    <a href="https://github.com/oob-skulden/oob-skulden-site" target="_blank" rel="noopener noreferrer me"
+        title="Github">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <path
+        d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+    </path>
+</svg>
+    </a>
     <a href="https://www.linkedin.com/in/stonepedal/" target="_blank" rel="noopener noreferrer me"
         title="Linkedin">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -197,7 +208,7 @@ Real detection queries. Actual remediation code.</p>
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://192.168.37.123:1313/">The Overlooked Cloud Security Expert</a></span> · 
+        <span>&copy; 2025 <a href="http://192.168.37.123:1313/">Oob Skulden</a></span> · 
 
     <span>
         Powered by
